# Online-Banking-System

./: .gitignore  README.md
2/: CMakeLists.txt  UserAccountUTest.cpp  run.bat  test.cpp
2/data/: acc001.txt  bankconfig.txt
2/data/accounts/: 1000000041.txt  234673.txt  234675.txt  346335.txt
2/data/transactions/: 234673.txt  346335.txt
2/data/users/: admin001.txt  customer001.txt  customer002.txt  test.txt
2/inc/: Account.cpp  Account.h  Administrator.cpp  Administrator.h  BankingSystem.cpp  BankingSystem.h  CurrentAccount.h  Customer.cpp  Customer.h  Employee.cpp  Employee.h  SavingsAccount.h  User.cpp  User.h
2/lib/: ConfigurationList.cpp  ConfigurationList.h  ConfigurationLoaderLib.h  PropertyBlock.cpp  PropertyBlock.h
Online Banking System/: .gitignore  Account.cpp  Account.h  Administrator.cpp  Administrator.h  BankingSystem.cpp  BankingSystem.h  CMakeLists.txt  Online Banking System.cpp  Online Banking System.h  build.bat  main.cpp  test.cpp
Online Banking System/data/: bankconfig.txt
Online Banking System/data/accounts/: 234673.txt  346335.txt
Online Banking System/data/transactions/: 234673.txt
Online Banking System/data/users/: admin001.txt  emp001.txt
Online Banking System/inc/: Account.cpp  Customer.cpp  Customer.h  User.cpp  User.h
Online Banking System/lib/: ConfigurationList.cpp  ConfigurationLoaderLib.h
